@@ -1,5 +1,17 @@
-What color is the ball?
+Cows eat grass.
 END.
+Scores of properties are under extreme fire threat as a huge blaze continues to advance through Sydney's north-western suburbs. 
+Fires have also shut down the major road and rail links between Sydney and Gosford.
+The promotional stop in Sydney was everything to be expected for a Hollywood blockbuster - phalanxes of photographers, a stretch limo to a hotel across the Quay - but with one difference. 
+A line-up of masseurs was waiting to take the media in hand. 
+Never has the term "massaging the media" seemed so accurate.
+END.
+Is Socrates an animal?
+Is Socrates mortal?
+END.
+What is an investment bank?
+An investment bank is a financial institution.
+What color is the ball?
 Give me the biggest ball.
 Give me the six biggest paychecks.
 Give me the last six paychecks.
